compiler/testData/diagnostics/tests/redeclarations/RedeclarationInDefaultObject.kt
// FIR_IDENTICAL
class A {
    companion object B {
        class <!REDECLARATION!>G<!>
        konst <!REDECLARATION!>G<!> = 1
    }
}